force-app/main/default/objects/Disbursal__c/Disbursal__c.object-meta.xml
<CustomObject>
    <label>Disbursal</label>
    <nameField>
        <displayFormat>DISB-{0000}</displayFormat>
        <label>Disbursal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>