force-app/main/default/objects/Disbursal__c/fields/Additional_Rate_of_Interest_if_app__c.field-meta.xml
<CustomField>
    <fullName>Additional_Rate_of_Interest_if_app__c</fullName>
    <label>Additional Rate of Interest (%) - if app</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>