force-app/main/default/objects/Disbursal__c/fields/CKYC_Original__c.field-meta.xml
<CustomField>
    <fullName>CKYC_Original__c</fullName>
    <description>This store the actual ckyc number of the main applicant.</description>
    <label>CKYC Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>