force-app/main/default/objects/Disbursal__c/fields/Disbursal_Author_ID__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Author_ID__c</fullName>
    <label>Disbursal Author ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>