force-app/main/default/objects/Disbursal__c/fields/Disbursal_Beneficiary_Type__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Beneficiary_Type__c</fullName>
    <label>Disbursal Beneficiary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>