force-app/main/default/objects/Disbursal__c/fields/Disbursal_Maker_ID__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Maker_ID__c</fullName>
    <label>Disbursal Maker ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>