force-app/main/default/objects/Disbursal__c/fields/Final_Disbursal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Disbursal_Amount__c</fullName>
    <label>Final Disbursal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>