force-app/main/default/objects/Disbursal__c/fields/First_Time_Right_FTR__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Right_FTR__c</fullName>
    <label>First Time Right (FTR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>