force-app/main/default/objects/Disbursal__c/fields/Fnl_annu_ROI_incl_adv_EMI__c.field-meta.xml
<CustomField>
    <fullName>Fnl_annu_ROI_incl_adv_EMI__c</fullName>
    <label>Fnl annu ROI (%) (incl adv EMI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>