force-app/main/default/objects/Disbursal__c/fields/FTR_Remarks_by_Author_OO_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>FTR_Remarks_by_Author_OO_Responsibility__c</fullName>
    <label>FTR-Remarks by Author(OO Responsibility)</label>
    <type>TextArea</type>
</CustomField>