force-app/main/default/objects/Disbursal__c/fields/Interest_Rate_Type_Fixed_Floating__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Type_Fixed_Floating__c</fullName>
    <label>Interest Rate Type (Fixed / Floating)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>