force-app/main/default/objects/Disbursal__c/fields/Loan_Amount_Sanctioned__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Sanctioned__c</fullName>
    <label>Loan Amount Sanctioned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>