force-app/main/default/objects/Disbursal__c/fields/Loan_No__c.field-meta.xml
<CustomField>
    <fullName>Loan_No__c</fullName>
    <label>Loan No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>