force-app/main/default/objects/Disbursal__c/fields/Monthly_Installment_EMI_Rs__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Installment_EMI_Rs__c</fullName>
    <label>Monthly Installment/ EMI (Rs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>