force-app/main/default/objects/Disbursal__c/fields/Ops_Comment__c.field-meta.xml
<CustomField>
    <fullName>Ops_Comment__c</fullName>
    <label>Ops Comment</label>
    <type>TextArea</type>
</CustomField>