force-app/main/default/objects/Disbursal__c/fields/Policy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Policy_Rate__c</fullName>
    <label>Policy Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>