force-app/main/default/objects/Disbursal__c/fields/Reason_for_add_l_ROI_if_appl__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_add_l_ROI_if_appl__c</fullName>
    <label>Reason for add&apos;l ROI, if appl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>