force-app/main/default/objects/Disbursal__c/fields/Repayment_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Tenure__c</fullName>
    <label>Repayment Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>