force-app/main/default/objects/Disbursal__c/fields/ROI_category__c.field-meta.xml
<CustomField>
    <fullName>ROI_category__c</fullName>
    <label>ROI category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>