force-app/main/default/objects/Disbursal__c/fields/ROI_including_advance_EMI__c.field-meta.xml
<CustomField>
    <fullName>ROI_including_advance_EMI__c</fullName>
    <label>ROI - (including advance EMI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>