force-app/main/default/objects/Disbursal__c/fields/Sanctioned_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sanctioned_Loan_Amount__c</fullName>
    <label>Sanctioned Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>