force-app/main/default/objects/Disbursal__c/fields/Total_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Total_Deductions__c</fullName>
    <label>Total Deductions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>