force-app/main/default/objects/Disbursal__c/fields/Tranche_1_2_Normal__c.field-meta.xml
<CustomField>
    <fullName>Tranche_1_2_Normal__c</fullName>
    <label>Tranche (1/2/Normal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>